[workspace]
members = [
    "01-foundations/classical-crypto",
    "01-foundations/number-theory", 
    "01-foundations/cryptopals",
    "02-primitives/symmetric",
    "02-primitives/hashing",
    "02-primitives/asymmetric",
    "03-protocols/tls",
    "examples/secure-chat",
    "examples/password-manager",
    "examples/blockchain-demo",
]

resolver = "2"

[workspace.dependencies]
# Common dependencies for all crates
rand = "0.8"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = "0.5"

# Cryptography crates
sha2 = "0.10"
aes = "0.8"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"

# Testing and benchmarking
proptest = "1.0"
