[package]
name = "number-theory"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

# Comment out the benchmark until we create the file
# [[bench]]
# name = "modular_arithmetic"
# harness = false